kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: rhwalks-dev

  labels:
    environment: development
    project: rhwalks-api
    team: backend
