kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: rhwalks-ingress
  namespace: rhwalks-dev

spec:
  ingressClassName: nginx

  rules:
    - host: rhwalks.local

      http:
        paths:

          - path: /
            pathType: Prefix

            backend:
              service:
                name: rhwalks-ui-service
                port:
                  number: 80

          - path: /api
            pathType: Prefix

            backend:
              service:
                name: rhwalks-api-service
                port:
                  number: 8080
